fix: correção de z-index do profile dropdown

--- a/react/supa-games/src/styles/profile-dropdown.css
+++ b/react/supa-games/src/styles/profile-dropdown.css
@@ -6,6 +6,7 @@
     font-size: 20px;
     margin-top: 12.5px;
     right: 15px;
+    z-index: 9999;
 }
 
 .icons a img {
